sass initial rules

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -11,4 +11,7 @@
     License URI: http://opensource.org/licenses/mit-license.php
 */
 
-@import 'reset';
+@import 'partials/reset';
+@import 'partials/variables';
+@import 'partials/general';
+ 
