--- a/scss/partials/_general.scss
+++ b/scss/partials/_general.scss
@@ -44,7 +44,7 @@ p {
 
 /* All images must not be larger than parent container */
 img {
-  width: 100%;
+  max-width: 100%;
 }
 
 /* No styling on list items */
@@ -59,6 +59,14 @@ li {
   margin: 0 auto;
   max-width: $screen-size-desktop-xl;
   overflow: visible;
+
+  @media screen and (max-width: $screen-size-desktop-xl) {
+    max-width: $screen-size-desktop-l;
+  }
+
+  @media screen and (max-width: $screen-size-desktop-l) {
+    max-width: 100%;
+  } 
 }
 
 .flex {
@@ -78,6 +86,11 @@ li {
   font-size: em(32px);
   font-weight: 700;
   padding: em(6px) em(20px);
+
+  @media screen and (max-width: $screen-size-tablet) {
+    font-size: em(24px);
+    padding: em(4px) em(10px);
+  }
 }
 
 // font-family: 
