--- a/scss/partials/_header.scss
+++ b/scss/partials/_header.scss
@@ -34,6 +34,7 @@
       color: $text-white;
       font-size: em(56px);
       line-height: 1.2;
+      margin: 0;
   
       strong {
         font-weight: 700;
