--- a/scss/style.scss
+++ b/scss/style.scss
@@ -10,7 +10,7 @@
     License: MIT
     License URI: http://opensource.org/licenses/mit-license.php
 */
-
+@use "sass:math";
 @import 'partials/reset';
 @import 'partials/variables';
 @import 'partials/general';
