--- a/scss/style.scss
+++ b/scss/style.scss
@@ -15,6 +15,8 @@
 @import 'partials/variables';
 @import 'partials/general';
 @import 'partials/header';
-@import 'partials/nosotros'
+@import 'partials/nosotros';
+@import 'partials/expertos';
+@import 'partials/productos';
 
  
