servicios template part and styles without blog entries

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -16,6 +16,7 @@
 @import 'partials/general';
 @import 'partials/header';
 @import 'partials/nosotros';
+@import 'partials/servicios';
 @import 'partials/expertos';
 @import 'partials/productos';
 
