--- a/scss/partials/_variables.scss
+++ b/scss/partials/_variables.scss
@@ -11,8 +11,11 @@ $space-width: 128px;
 
 $font-size-general: 16px;
 @function em($pixels) {
-  // @return ($pixels / $font-size-general) * 1em;
   @return (math.div($pixels, $font-size-general)) *1em;
+}
+
+@function rem($pixels) {
+  @return (math.div($pixels, $font-size-general)) *1rem;
 }
 
 $text-white: #fff;
